# DATATHON_IKIGAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
model/: README.md  pyproject.toml  requirements.txt  test_phase3_import.py  test_phase3_sql.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8a.py
model/config/: local.example.yaml
model/scripts/: 00_check_data.py  10_preaggregate.py  11_build_candidates_train.py  12_build_candidates_predict.py  13_train_ranker.py  14_score_candidates.py  15_rerank_and_submit.py  16_evaluate_candidates.py  17_evaluate_local.py  18_analyze_marketplace_health.py
model/src/: __init__.py
model/src/candidates/: __init__.py  merge.py  pipeline.py
model/src/candidates/sources/: __init__.py  category_pop.py  city_cat_pop.py  covisit.py  global_pop.py  reengagement.py
model/src/common/: __init__.py  config.py  db.py  io.py  logging_utils.py
model/src/evaluation/: __init__.py  candidate_metrics.py  ground_truth.py  health_metrics.py  metrics.py
model/src/features/: __init__.py  feature_joiner.py  item_features.py  pair_features.py  temporal_features.py  user_features.py
model/src/preagg/: __init__.py  aggregator.py  pipeline.py
model/src/ranker/: __init__.py  feature_spec.py  score.py  train.py
model/src/rerank/: __init__.py  health_reranker.py  rules.py
model/src/submission/: __init__.py  builder.py  validator.py
model/tests/: __init__.py  test_candidate_recall.py  test_candidates_format.py  test_no_leakage.py  test_ranker_features.py  test_submission_format.py  test_weighted_score.py
(+48 files in other folders)
